--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
-<html><head> 
+<html>
+   <head> 
     <meta name="viewport" content="width=device-width, initial-scale=1"> 
     <meta charset="utf-8"> 
     <title>weather</title> 
@@ -74,7 +75,7 @@
         </div>
      </div> 
     </div> 
-    <!-- <div class="forecast-weather">
+    <div class="forecast-weather">
       <div class="forecast-day-weather">
          <p class="day">19.11</p>
          <img src="http://openweathermap.org/img/wn/10d@2x.png"> 
@@ -117,7 +118,7 @@
          <h1 class="current-temperature">26°c</h1> 
          <h4>Дождь</h4> 
       </div>
-  </div> -->
+  </div>
     <script src="/script.js"></script>
   </body>
   </html>
