add search logo

--- a/index.html
+++ b/index.html
@@ -79,6 +79,7 @@
       <div class="forecast-day-weather">
          <p class="day">19.11</p>
          <img src="http://openweathermap.org/img/wn/10d@2x.png"> 
+         <img src="/weather-app/src/assets/img/magnifier-1724298.svg"> 
          <h1 class="current-temperature">26°c</h1> 
          <h4>Дождь</h4> 
       </div>
